--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,6 +13,11 @@
 				</tr>
 			</thead>
 			<tbody>
+				<tr th:each="student: ${students}">
+					<td><a th:href="@{'/students/' + ${student.id}}" th:text="${student.id}"></a></td>
+					<td th:text="${student.name}"></td>
+					<td></td>
+				</tr>
 			</tbody>
 		</table>
 		<form method="POST" action="/students" class="form-inline">
