--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -4,7 +4,7 @@
 <body>
 	<th:block layout:fragment="rows">
 		<h1 th:text="${student.name}"></h1>
-		<form method="POST" action="scores">
+		<form method="POST" th:action="'/students/' + ${student.id} + '/scores'">
 			<input type="hidden" name="_method" value="PUT" />
 			<table class="table">
 				<caption>Оценки</caption>
@@ -17,7 +17,10 @@
 				<tbody>
 					<tr th:each="score: ${scores}">
 						<td th:text="${score.key.name}"></td>
-						<td><input type="number" min="1" max="100" class="form-control" th:value="${score.value}" /></td>
+						<td>
+							<input type="hidden" name="subjectIds[]" th:value="${score.key.id}" />
+							<input type="number" min="1" max="100" class="form-control" name="scores[]" th:value="${score.value}" />
+						</td>
 					</tr>
 				</tbody>
 			</table>
