--- a/src/main/resources/templates/BASE.html
+++ b/src/main/resources/templates/BASE.html
@@ -5,6 +5,9 @@
 <meta charset="utf-8" />
 <title>hw2</title>
 <link rel="stylesheet" href="/webjars/bootstrap/3.3.2-1/css/bootstrap.min.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="/webjars/bootstrap/3.3.2-1/js/bootstrap.min.js" ></script>
+<script src="/script.js" ></script>
 </head>
 <body>
 	<div class="container">
